--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     <title>m3u8-downloader</title>
-    <link href="src/style.css" rel="stylesheet">
+    <link href="./src/style.css" rel="stylesheet">
 </head>
 <body>
 <div id="app"></div>
-<script src="src/main.ts" type="module"></script>
+<script src="./src/main.ts" type="module"></script>
 </body>
 </html>
 
