--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
     <title>m3u8-downloader</title>
     <link href="./src/style.css" rel="stylesheet">
 </head>
-<body>
+<body style="widows: 1">
 <div id="app"></div>
 <script src="./src/main.ts" type="module"></script>
 </body>
