--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     <title>m3u8-downloader</title>
 </head>
-<body class="heisir">
+<body class="heisir" style="--wails-draggable:drag">
 <div id="app"></div>
 <script src="./src/main.ts" type="module"></script>
 </body>
